# FASTCAMPUS-python-langchain-langgraph

./: .gitignore  PRD.md  README.md  n8n.json  pyproject.toml
Final_Project/: CLAUDE.md  TODO.md  main.py  n8n_to_code.md
Final_Project/src/: config.py  report.py  schemas.py
LangChain/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
LangChain/00_setup/: 모듈00_환경설정.ipynb
LangChain/01_hello/: 모듈01_Hello_LangChain.ipynb
LangChain/02_prompts/: 모듈02_프롬프트_템플릿.ipynb
LangChain/03_lcel/: 모듈03_LCEL_파이프_연산자.ipynb
LangChain/04_output_parsers/: 모듈04_출력_파서.ipynb
LangChain/05_memory/: 모듈05_메모리와_대화_관리.ipynb
LangChain/06_document_loaders/: 모듈06_문서_로딩과_텍스트_분할.ipynb
LangChain/06_document_loaders/data/: langchain_intro.txt
LangChain/07_embeddings/: 모듈07_임베딩과_벡터_저장소.ipynb
LangChain/07_embeddings/pipeline_db/: chroma.sqlite3
LangChain/08_rag/: 모듈08_RAG.ipynb
LangChain/08_rag/data/: ai_trends.txt
LangChain/09_agents/: 모듈09_에이전트와_도구.ipynb
LangChain/script/: module00.md
LangGraph/: 커리큘럼.md
LangGraph/00_setup/: 모듈00_환경설정.ipynb
LangGraph/01_first_graph/: 모듈01_첫번째_그래프.ipynb
LangGraph/02_state_management/: 모듈02_상태관리.ipynb
LangGraph/03_conditional_flow/: 모듈03_조건부흐름.ipynb
LangGraph/04_chatbot/: 모듈04_대화형챗봇.ipynb
LangGraph/05_agent/: 모듈05_도구에이전트.ipynb
Python/: .gitignore  README.md  챕터01_파이썬_시작하기.ipynb  챕터02_변수와_기본_자료형.ipynb  챕터03_연산자.ipynb  챕터04_자료구조.ipynb  챕터05_제어흐름.ipynb  챕터06_함수.ipynb  챕터07_문자열심화.ipynb  챕터08_입출력.ipynb  챕터09_예외처리.ipynb  챕터10_모듈과패키지.ipynb  챕터11_객체지향프로그래밍.ipynb
src/: agents.py  graph.py  pipeline.py  tools.py
