[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-google-genai>=4.0",
    "langchain-chroma",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "chromadb>=0.5",
    "duckduckgo-search>=6.0",
    "langchainhub>=0.1",
    "langchain-huggingface>=1.2.1",
    "sentence-transformers>=5.2.3",
    "ddgs>=9.11.1",
]
